--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 .hero{
     height: 100vh;
     width: 100%;
-    background-image: url(/image/blacky.jpg);
+    background-image: url(/image/sky.jpg);
     background-position: center;
     background-size: cover;
 }
