--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ span{
     text-decoration: none;
     color: white;
     padding: 10px 25px;
+    font-family: monospace;
 }
 .hero ul li a:hover{
     background-color: #f9004d;
@@ -183,8 +184,8 @@ h5{
 .card {
     overflow: hidden;
     background-color: #191919;
-    width: 310px;
-    height: 350px;
+    width: 270px;
+    height: 300px;
     padding: 20px 35px;
     margin: 15px;
     border-radius: 20px;
@@ -217,6 +218,7 @@ h5{
     padding: 9px 22px; 
     align-items: center;
     transition:  .4s;
+
 
 }
 .card .button:hover{
